## Process this file with automake to produce Makefile.in
AUTOMAKE_OPTIONS = foreign

bin_PROGRAMS = prolacc

prolacc_SOURCES = clp.c \
	codeblock.hh codeblock.cc \
	compiler.hh compiler.cc \
	declarat.hh declarat.cc \
	error.hh error.cc \
	exception.hh exception.cc \
	expr.hh expr.cc \
	feature.hh feature.cc \
	field.hh field.cc \
	fork.hh fork.cc \
	gentrack.hh gentrack.cc \
	globmatch.hh globmatch.cc \
	idcapsule.hh idcapsule.cc \
	landmark.hh landmark.cc \
	literal.hh literal.cc \
	location.hh location.cc \
	modfrob.hh modfrob.cc \
	module.hh module.cc \
	namespace.hh namespace.cc \
	node.hh node.cc \
	operator.hh operator.cc \
	optimize.hh optimize.cc \
	permstr.cc \
	program.hh program.cc \
	prototype.hh prototype.cc \
	resolvarg.hh resolvarg.cc \
	rule.hh rule.cc \
	ruleset.hh ruleset.cc \
	target.hh target.cc \
	token.hh token.cc \
	type.hh type.cc \
	vectorv.cc \
	writer.hh writer.cc \
	yuck.hh yuck.cc \
	main.cc

INCLUDES = -I$(top_srcdir)/include
